Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.6(EOL)
Description
MDEV-515 will replace row-level locking with table-level locking in the special case that an INSERT is performed into an empty table or partition.
This causes a few replication testMajors to fail. We have adjusted some tests by inserting an extra record into the table, so that the normal row-level locking and undo logging will be used. But, some tests will require deeper studying to assess whether such a work-around is acceptable or whether some improvements to the replication logic will be needed.
Attachments
Issue Links
- is caused by
-
MDEV-515 innodb bulk insert
-
- Closed
-
- relates to
-
MDEV-30420 Assertion `mode_ == m_local' failed in int wsrep::client_state::append_key(const wsrep::key&)
-
- Closed
-