MDEV-24623 Replicate bulk insert as table-level exclusive key

- introduce table key construction function in wsrep service interface
- don't add row keys when replicating bulk insert
- implement actual bulk insert table-level key replication